[tool.poetry]
name = "reform"
version = "0.6"
description = "Reform is a tool kit developed to expand and simplify creating terraform infrastructures with the AWS provider."
authors = ["Aaron Collins <Aaron.Collinsa+reform@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
boto3 = ">=1.36.24"
pycryptodome = "^3.21.0"
pyee = "^8.1.0"
Jinja2 = ">=3.1.5"
python-hcl2 = "^2.0.3"
pyyaml = "^6.0.2"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
nose = "^1.3.7"

[tool.poetry.scripts]
reform = 'reform:program.run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
